--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,10 @@ requests>=2.28.0
 # Vector storage and search
 faiss-cpu>=1.7.0
 
+# Web scraping for LeetCode (optional - for Selenium-based approach)
+selenium>=4.0.0
+beautifulsoup4>=4.11.0
+
 # PDF processing (requires external GROBID service)
 # xml parsing is included in Python standard library
 
@@ -21,3 +25,7 @@ pytest>=7.0.0
 black>=22.0.0
 flake8>=5.0.0
 mypy>=1.0.0
+
+# Jupyter support (optional)
+jupyter>=1.0.0
+ipython>=8.0.0
